# ossify

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: app.js  index.html  install.ps1  install.sh  styles.css
docs/launch/: publicity-pack.md
frontend-demo/: README.md  components.json  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend-demo/components/ui/: 3d-testimonails-demo.tsx  3d-testimonails.tsx  animated-group.tsx  animated-text-cycle-demo.tsx  animated-text-cycle.tsx  avatar.tsx  card.tsx  deferred-section.tsx  flickering-footer.tsx  floating-header.tsx  hero-section-1.tsx  sheet.tsx  text-effect.tsx
frontend-demo/scripts/: prepare-netlify.mjs
frontend-demo/src/: App.tsx  demo.tsx
frontend-demo/src/styles/: globals.css
knowledge/: common.yml  go.yml  node.yml  python.yml  rust.yml
knowledge/calibration/: README.md  rust-deps-profile.toml
knowledge/calibration/rust-deps-fixtures/: clean.toml  critical.toml  direct-source.toml  high.toml  medium.toml  (+5 more)
knowledge/upstreams/: README.md  audit-ci.md  cargo-deny.md  pip-audit.md  release-please.md  release-rust.md
scripts/launch/: Common.ps1  Copy-OssifyLaunchMessage.ps1  New-OssifyLaunchDrafts.ps1  Open-OssifyAccountSetup.ps1  Open-OssifyLaunchTabs.ps1  Show-OssifyLaunchChecklist.ps1  launch-data.psd1
src/: audit.rs  cli.rs  clipboard.rs  config.rs  doctor.rs  engines.rs  generator.rs  lib.rs  main.rs  project.rs  prompt.rs  report.rs  rust_deps.rs  templates.rs  trust.rs
src/intel/: explain.rs  history.rs  index.rs  inference.rs  knowledge.rs  mod.rs
src/ui/: mod.rs  model.rs  static_render.rs  tui.rs
