[package]
name = "ossify"
version = "0.2.2"
edition = "2021"
default-run = "ossify"
authors = ["Open Source Builders"]
description = "A Rust CLI that audits repository readiness, explains gaps, and scaffolds GitHub-aware open source files."
license = "MIT"
readme = "README.md"
repository = "https://github.com/zay168/ossify"
homepage = "https://ossify-react.netlify.app/ossify/"
keywords = ["cli", "open-source", "github", "repository", "audit"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
arboard = "3.6.1"
blake3 = "1.8.2"
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.28.1"
flate2 = "1.1.9"
gix = "0.81.0"
ignore = "0.4.25"
pulldown-cmark = "0.13.0"
ratatui = "0.29.0"
redb = "2.6.3"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tar = "0.4.44"
toml = "0.8.20"
unicode-width = "0.2.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[package.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "powershell"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

[profile.release]
lto = true
codegen-units = 1
strip = true
